# poetry-book

./: Cargo.toml  README.md
src/: lib.rs
src/core/: average.rs  book.rs  book_attributes.rs  mod.rs  paragraph.rs  poem.rs  poem_formatting.rs  preface.rs
src/lang/latex/: book_body_latex.rs  book_latex.rs  latex_output.rs  mod.rs  paragraph_latex.rs  poem_latex.rs  preface_latex.rs
tests/: latex_book.rs
